0.2.0
-----

* Add "Abort" link to TaskStatus admin page. (#419)

0.1.4
-----

* Added "Forgot Password?" link. (#536)
* Added setting to explicitly enable/disable email. (#680)
* Pushing enter in a modal form now submits it. (#577)
* Fix broken "expand search to all categories" link. (#673)
* Improved usability of notifications. (#666)
* Fix unescaped quotes in searches breaking pagination. (#665)
* Fix "Browse all datasets" link on homepage. (#662)
* Fix major bug with how search filters are applied. (#661)
* Export cross-dataset search results. (#657)
* Export single-dataset search results. (#641)
* Users can now change their password. (#299)
* Users can now update their email address. (#652)
* Users can now update their name. (#150)
* Per-user pages instead of email links. (#650)

0.1.3
-----

* Add documentation links to the header of the app. (#623)
* Reorganize documentation so users come first. (#624)
* Add metrics dashboard.
* Fix long-standing bug where dataset metadata might not get created. (#618)
* Intelligently handle currency symbols in numeric columns. (#538)
* Ensure related files are deleted when datasets are. (#612)
* Implement dataset paging. (#609)
* Overhaul datasets search urls.
* Use human-readable data types. (#588)
* Fix bug preventing new users from activating. (#614)
* Fix bug preventing new users from being created. (#614)
* Write user documentation. (#601)
* Fix bug where an empty cell in a datetime column could break import. (#608)
* Escape dataset names in email. (#610)

0.1.2
-----

* Revise release process to prevent docs from referencing the master branch.
* Fix bug where users could not login if their username was changed. (#511)
* Wrote documentation for connecting via SSH.
* Made max upload size configurable via admin settings. (#508)
* Upgraded to Django 1.4. (#561)
* Fixed escaping in dataset titles displayed in notifications (#598)
* Doubled the amount of memory allocated to Solr.