@@ -167,6 +167,8 @@ h3 { font-weight: normal; padding-bottom: 4px; }
 
 /* Upload page */
 
+#upload .alert { margin-top: 8px; }
+
 .toggle-csv-options { display: block; }
 .csv-options { display: none; padding-bottom: 5px; }
 .csv-options h5 { margin-bottom: 5px; }
