@@ -80,6 +80,8 @@
         PANDA.settings.DEFAULT_SEARCH_ROWS_PER_GROUP = {{ settings.PANDA_DEFAULT_SEARCH_ROWS_PER_GROUP }};
         PANDA.settings.DEFAULT_SEARCH_ROWS = {{ settings.PANDA_DEFAULT_SEARCH_ROWS }};
         PANDA.settings.UNCATEGORIZED_ID = {{ settings.PANDA_UNCATEGORIZED_ID }};
+        PANDA.settings.AVAILABLE_SPACE_WARN = {{ settings.PANDA_AVAILABLE_SPACE_WARN }};
+        PANDA.settings.AVAILABLE_SPACE_CRITICAL = {{ settings.PANDA_AVAILABLE_SPACE_CRITICAL }};
         PANDA.settings.MAX_UPLOAD_SIZE = {{ max_upload_size }};
         PANDA.settings.DEMO_MODE = {{ demo_mode }};
         PANDA.settings.EMAIL_ENABLED = {{ email_enabled }};
