@@ -221,6 +221,8 @@ PANDA_SNIFFER_MAX_SAMPLE_SIZE = 1024 * 100  # 100kb
 PANDA_SAMPLE_DATA_ROWS = 5
 PANDA_SCHEMA_SAMPLE_ROWS = 100
 PANDA_ACTIVATION_PERIOD = datetime.timedelta(days=30)
+PANDA_AVAILABLE_SPACE_WARN = 1024 * 1024 * 1024 * 2 # 2GB
+PANDA_AVAILABLE_SPACE_CRITICAL = 1024 * 1024 * 1024 * 1 # 1GB
 
 PANDA_UNCATEGORIZED_ID = 0
 PANDA_UNCATEGORIZED_SLUG = 'uncategorized'
